--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ dl {
   background-color: white;
   color: grey;
   margin-block-start: 0;
-  padding: 20px 0 20px 175px;
+  padding: 20px 10px 20px 175px;
   position: relative;
 }
 
@@ -142,6 +142,7 @@ dt::before {
 }
 
 dd {
+  display: inline-block;
   margin-block-end: 15px;
   font-size: 0.95em;
 }
@@ -260,6 +261,40 @@ dd {
       rgba(21, 21, 21, 1) 8%,
       rgba(21, 21, 21, 1) 100%
     );
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: initial;
+  }
+
+  .work-timeline-list {
+    padding: 20px 10px 20px 30px;
+  }
+  
+  .work-timeline-list::before,
+  dt::before {
+    display: none;
+  }
+
+  .work-timeline-list {
+    position: relative;
+  }
+  
+  .work-timeline-list a::before {
+    left: 0px;
+    top: 20px;
+    width: initial;
+  }
+
+  dt,
+  dd {
+    margin-block-start: 15px;
+  }
+
+  dd {
+    margin-inline-start: 15px;
   }
 }
 
