--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,10 @@ dd {
     padding: initial;
   }
 
+  .name span {
+    font-size: 24px;
+  }
+
   .work-timeline-list {
     padding: 20px 10px 20px 30px;
   }
