--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ a {
   min-width: 320px;
   max-width: 840px;
   background-color: whitesmoke;
-  padding: 15px 30px 35px 35px;
+  padding: 15px 35px 35px 35px;
   border-radius: 3px;
   box-sizing: border-box;
 }
@@ -269,12 +269,16 @@ dd {
     padding: initial;
   }
 
+  .box {
+    padding: 5px 15px 20px 15px;
+  }
+
   .name span {
     font-size: 24px;
   }
 
   .work-timeline-list {
-    padding: 20px 10px 20px 30px;
+    padding: 20px;
   }
   
   .work-timeline-list::before,
