--- a/styles.css
+++ b/styles.css
@@ -173,9 +173,10 @@ dd {
 
 .name {
   color: #333;
+  margin-block-end: 0;
 }
 
-.name span {
+.role {
   color: #adadad;
   display: inline-block;
 }
@@ -249,6 +250,11 @@ dd {
 
   .box {
     background-color: #232323;
+    color: #ccc;
+  }
+
+  .box p {
+    line-height: 150%;
   }
 
   .name {
@@ -319,8 +325,8 @@ dd {
     padding: 5px 15px 20px 15px;
   }
 
-  .name span {
-    font-size: 24px;
+  .role {
+    font-size: 1.1em;
   }
 
   .work-timeline-list {
