--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,17 @@ a {
   max-width: 840px;
   background-color: whitesmoke;
   padding: 15px 35px 35px 35px;
-  border-radius: 3px;
+  border: 5px solid black
+}
+
+.name {
+  color: DarkGray;
+  margin-block-end: 0;
+}
+
+.role {
+  color: dimgrey;
+  display: inline-block;
 }
 
 summary::-webkit-details-marker {
@@ -171,16 +181,6 @@ dd {
   font-size: 0.95em;
 }
 
-.name {
-  color: #333;
-  margin-block-end: 0;
-}
-
-.role {
-  color: #adadad;
-  display: inline-block;
-}
-
 .phone_email {
   margin-block-start: 1em;
   margin-block-end: 1em;
@@ -241,7 +241,7 @@ dd {
 @media (prefers-color-scheme: dark) {
   body {
     color: white;
-    background: black;
+    background: #222;
   }
 
   a {
@@ -249,8 +249,9 @@ dd {
   }
 
   .box {
-    background-color: #232323;
+    background-color: #333;
     color: #ccc;
+    border-color: Gray;
   }
 
   .box p {
@@ -258,8 +259,11 @@ dd {
   }
 
   .name {
-    background-color: #232323;
-    color: #ccc;
+    color: Gray;
+  }
+
+  .role {
+    color: silver;
   }
 
   .phone_email .item {
@@ -278,16 +282,16 @@ dd {
   }
 
   .work-timeline-label {
-    background-color: #111;
+    background-color: #222;
   }
 
   .work-timeline-list {
-    background-color: #111;
+    background-color: #222;
     color: silver;
   }
 
   .work-timeline-list a {
-    background-color: #111;
+    background-color: #222;
     color: #ccaa00;
   }
 
@@ -297,7 +301,7 @@ dd {
 
   dt::before {
     color: dimgrey;
-    text-shadow: 0px 2px 0px #111, 0px -2px 0px #111;
+    text-shadow: 0px 2px 0px #222, 0px -2px 0px #222;
   }
 
   .work-timeline-list::before {
