--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background: white;
   color: black;
+  overflow-y: scroll;
 }
 
 a,
